--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "@supabase/supabase-js": "^2.39.0",
     "framer-motion": "^10.16.16",
     "next": "15.0.0",
+    "pg": "^8.16.3",
     "react": "^18",
     "react-dom": "^18"
   },
